# torpedo_page

./: .gitignore  ASCⅡ_art.md  CONTRIBUTING.md  README.md  README.zh-CN.md  Shadcn.txt  design.md  package.json
.cursor/rules/: development_guidelines.mdc  project_overview.mdc
backend/: .dockerignore  .uvignore  Dockerfile  Makefile  QUICKSTART.md  README.md  To-do.md  blog.db  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_setup.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  category.py  post.py  tag.py  user.py
backend/scripts/: dev.py
frontend/: .prettierrc.js  To-do&Completed.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/admin/: ScopeSubMenu.tsx
frontend/src/components/cms/: BlogPostEditor.tsx  ContentRenderer.tsx  EditorToolbar.tsx  ImageDialog.tsx  LinkDialog.tsx  MathDialog.tsx  RichTextEditor.tsx
frontend/src/components/common/: ChoiceModal.tsx  FAB.tsx
frontend/src/components/home/: HeroSection.tsx  LatestArticlesSection.tsx  ProjectHighlightsSection.tsx  SelfIntroSection.tsx  SocialLinksSection.tsx
frontend/src/components/icons/: LoveStatusIcon.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/magicui/: Dock.tsx  Dock.variants.ts  bento-grid.tsx  particles.tsx  pointer.tsx
frontend/src/components/tiptap-extensions/: CustomOrderedList.ts  Sidenote.ts  StyledTextMark.ts
frontend/src/config/: editor.ts  homeBentoFeatures.data.tsx  homeBentoFeatures.tsx
frontend/src/hooks/: useDynamicBentoFeatures.ts  useDynamicBentoFeatures.tsx
frontend/src/layouts/: DashboardLayout.tsx  MainLayout.tsx
frontend/src/pages/: AboutPage.tsx  AcademicPage.tsx  AdminDashboardPage.tsx  AdminLoginPage.tsx  BlogDetailPage.tsx  BlogListPage.tsx  ContactPage.tsx  HomePage.tsx  NotFoundPage.tsx  ProjectsPage.tsx
frontend/src/pages/admin/: AdminDashboardPage.tsx  AdminLoginPage.tsx  CmsPlaygroundPage.tsx  RssPlaygroundPage.tsx  SettingsPlaygroundPage.tsx  TodoPlaygroundPage.tsx
frontend/src/pages/blog/: BlogDetailPage.tsx  BlogListPage.tsx
frontend/src/pages/dashboard/: OverviewPage.tsx
frontend/src/pages/dev/: EditorSandboxPage.tsx
frontend/src/styles/: editor.css
